[gd_scene load_steps=29 format=3 uid="uid://dehr306ro2els"]

[ext_resource type="Script" path="res://actors/zombies/Zombie.gd" id="1_m2qs6"]
[ext_resource type="PackedScene" uid="uid://cf7a6i008ntfr" path="res://assets/lowpoly_char/char.glb" id="2_07wdt"]
[ext_resource type="AudioStream" uid="uid://bi3t3m233uksw" path="res://sfx/actors/enemies/zombie_hit.wav" id="3_nk6bd"]
[ext_resource type="AudioStream" uid="uid://cth6r42rnk4j0" path="res://sfx/actors/enemies/zombie_attack.wav" id="4_ybw3s"]
[ext_resource type="AudioStream" uid="uid://cmqqe4g3t6oen" path="res://sfx/actors/enemies/zombie_die.wav" id="5_1ybn2"]
[ext_resource type="Texture2D" uid="uid://ba0o08dwpeh5a" path="res://assets/decals/blood/bloodtexture.png" id="6_hio0l"]
[ext_resource type="Texture2D" uid="uid://c1n2ierkt00qy" path="res://assets/decals/bulletholes/bullet_hole_normal.jpg" id="7_f0rpp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vigr1"]
radius = 0.4

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_myx33"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b6ici"]
animation = &"Die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dm6go"]
animation = &"Hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rqxyu"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jc0n8"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_slrsw"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8m1h4"]
xfade_time = 0.2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_enuij"]
xfade_time = 0.2
priority = 2
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lqy5t"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n77ak"]
xfade_time = 0.1
priority = 0
advance_mode = 2
advance_condition = &"dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0m7ri"]
priority = 0
advance_mode = 2
advance_condition = &"dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4rce2"]
priority = 0
advance_mode = 2
advance_condition = &"dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hby4m"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"hit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f3rfy"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_b8a7k"]
states/Attack/node = SubResource("AnimationNodeAnimation_myx33")
states/Attack/position = Vector2(570, 158)
states/Die/node = SubResource("AnimationNodeAnimation_b6ici")
states/Die/position = Vector2(227, 202)
states/Hit/node = SubResource("AnimationNodeAnimation_dm6go")
states/Hit/position = Vector2(696, 40)
states/Idle/node = SubResource("AnimationNodeAnimation_rqxyu")
states/Idle/position = Vector2(373, 86)
states/Start/position = Vector2(187, 86)
states/Walk/node = SubResource("AnimationNodeAnimation_jc0n8")
states/Walk/position = Vector2(570, 86)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_slrsw"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_8m1h4"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_enuij"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_lqy5t"), "Idle", "Die", SubResource("AnimationNodeStateMachineTransition_n77ak"), "Walk", "Die", SubResource("AnimationNodeStateMachineTransition_0m7ri"), "Attack", "Die", SubResource("AnimationNodeStateMachineTransition_4rce2"), "Walk", "Hit", SubResource("AnimationNodeStateMachineTransition_hby4m"), "Hit", "Idle", SubResource("AnimationNodeStateMachineTransition_f3rfy")]
graph_offset = Vector2(36, -19)

[sub_resource type="Curve" id="Curve_x668k"]
_data = [Vector2(0.0115385, 0.673684), 0.0, 3.83158, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_m3hcl"]
curve = SubResource("Curve_x668k")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1ijid"]
direction = Vector3(0, 2, 0)
spread = 60.0
initial_velocity_min = 1.0
initial_velocity_max = 3.0
scale_min = 0.1
scale_max = 0.3
scale_curve = SubResource("CurveTexture_m3hcl")
collision_mode = 1
collision_friction = 0.68
collision_bounce = 0.09

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kpkkf"]
shading_mode = 2
albedo_color = Color(0.552941, 0, 0, 1)
roughness = 0.14
emission = Color(0.352941, 0, 0, 1)
rim_enabled = true
rim_tint = 0.43
refraction_scale = 0.18

[sub_resource type="SphereMesh" id="SphereMesh_tgvye"]
material = SubResource("StandardMaterial3D_kpkkf")
radius = 0.1
height = 0.2
radial_segments = 8
rings = 8

[node name="Zombie" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_m2qs6")

[node name="char" parent="." instance=ExtResource("2_07wdt")]

[node name="Skeleton3D" parent="char/rig" index="0"]
bones/0/position = Vector3(0, 0.998355, -0.0552)
bones/7/position = Vector3(-6.18016e-09, 0.998355, -0.0552)
bones/8/position = Vector3(6.18016e-09, 0.998355, -0.0552)
bones/9/position = Vector3(0.098, 1.06046, -0.0124)
bones/9/rotation = Quaternion(0.84063, 0.0350147, -0.539477, 0.0328551)
bones/9/scale = Vector3(1.00534, 0.98943, 1.00534)
bones/10/rotation = Quaternion(1.33185e-08, 0.244688, 1.00468e-08, 0.969602)
bones/11/rotation = Quaternion(0.118391, 0.24504, -0.0297467, 0.961797)
bones/11/scale = Vector3(1.0006, 0.997002, 1.0025)
bones/12/rotation = Quaternion(-3.26946e-08, -0.218941, 2.17982e-08, 0.975738)
bones/13/rotation = Quaternion(-0.615813, 0.209123, 0.214832, 0.728621)
bones/13/scale = Vector3(0.994355, 0.994023, 1.01184)
bones/14/rotation = Quaternion(2.86065e-05, 0.995358, -0.0962452, -2.1541e-06)
bones/14/scale = Vector3(0.999979, 1.00004, 0.999986)
bones/15/position = Vector3(-0.098, 1.06046, -0.0124)
bones/15/rotation = Quaternion(0.840905, -0.0122562, 0.537189, 0.0644693)
bones/15/scale = Vector3(1.00474, 0.990616, 1.00474)
bones/16/rotation = Quaternion(1.53753e-08, -0.244454, -6.19e-09, 0.969661)
bones/17/rotation = Quaternion(0.102652, -0.244615, 0.0256482, 0.96383)
bones/17/scale = Vector3(1.00053, 0.997888, 1.00164)
bones/18/rotation = Quaternion(-3.36081e-08, 0.2196, -1.48379e-08, 0.97559)
bones/19/rotation = Quaternion(-0.592999, -0.213596, -0.205437, 0.748682)
bones/19/scale = Vector3(0.995028, 0.995017, 1.01008)
bones/20/rotation = Quaternion(-2.81724e-05, 0.995359, -0.0962348, 2.12374e-06)
bones/20/scale = Vector3(0.999981, 1.00004, 0.999988)
bones/21/position = Vector3(0.0183, 1.59356, 0.0684)
bones/21/rotation = Quaternion(-0.669494, -0.316574, -0.384231, 0.551294)
bones/22/position = Vector3(0.196445, 1.53872, -0.0267)
bones/22/rotation = Quaternion(-0.233252, -0.149734, 0.944996, -0.173657)
bones/22/scale = Vector3(1.00214, 0.99574, 1.00214)
bones/23/rotation = Quaternion(-7.7702e-08, -0.00130964, 6.03062e-08, 0.999999)
bones/24/rotation = Quaternion(0.32822, -0.00131163, 0.000588853, 0.9446)
bones/24/scale = Vector3(1.00012, 0.996541, 1.0034)
bones/25/rotation = Quaternion(-9.9979e-08, 0.00518057, -1.08673e-07, 0.999987)
bones/26/rotation = Quaternion(0.00302292, 0.00733196, -0.0526156, 0.998583)
bones/26/scale = Vector3(0.997814, 1.00445, 0.997762)
bones/27/position = Vector3(-0.0183, 1.59356, 0.0684)
bones/27/rotation = Quaternion(-0.669494, 0.316574, 0.384231, 0.551294)
bones/28/position = Vector3(-0.196445, 1.53872, -0.0267)
bones/28/rotation = Quaternion(0.229079, -0.170141, 0.943043, 0.17101)
bones/28/scale = Vector3(1.00155, 0.996908, 1.00155)
bones/29/rotation = Quaternion(6.0444e-08, 0.000127868, 4.8409e-08, 1)
bones/30/rotation = Quaternion(0.301926, 0.000115158, -4.43002e-05, 0.953331)
bones/30/scale = Vector3(1.00008, 0.997908, 1.00204)
bones/31/rotation = Quaternion(4.51095e-08, 0.00154385, 5.74297e-09, 0.999999)
bones/32/rotation = Quaternion(0.00511004, -0.000609582, 0.0603524, 0.998164)
bones/32/scale = Vector3(0.998444, 1.00319, 0.998382)
bones/33/position = Vector3(0.1184, 1.44806, -0.0485)
bones/33/rotation = Quaternion(2.51215e-15, 0.707107, 0.707107, 2.58023e-15)
bones/34/position = Vector3(-0.1184, 1.44806, -0.0485)
bones/34/rotation = Quaternion(2.51215e-15, 0.707107, 0.707107, 2.58023e-15)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_vigr1")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_b8a7k")
anim_player = NodePath("../char/AnimationPlayer")
active = true
parameters/conditions/attack = false
parameters/conditions/dead = false
parameters/conditions/hit = false

[node name="GunOrigin" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
gizmo_extents = 1.16

[node name="Audio" type="Node3D" parent="."]

[node name="Hit" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
stream = ExtResource("3_nk6bd")
volume_db = 5.0
pitch_scale = 0.9
bus = &"Sounds"

[node name="Attack" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("4_ybw3s")
bus = &"Sounds"

[node name="Die" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("5_1ybn2")
bus = &"Sounds"

[node name="HitBlood" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.43356, 0)
cast_shadow = 0
emitting = false
amount = 64
lifetime = 5.0
one_shot = true
explosiveness = 1.0
fixed_fps = 12
process_material = SubResource("ParticleProcessMaterial_1ijid")
draw_pass_1 = SubResource("SphereMesh_tgvye")

[node name="GPUParticlesCollisionBox3D" type="GPUParticlesCollisionBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="BloodDecal" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, -1)
visible = false
layers = 9
size = Vector3(2, 0.75, 2)
texture_albedo = ExtResource("6_hio0l")
texture_normal = ExtResource("7_f0rpp")
modulate = Color(0.435294, 0, 0.0392157, 1)
normal_fade = 0.5
distance_fade_enabled = true

[editable path="char"]
